fix clipping issue social page

--- a/src/css/Shared/page2.css
+++ b/src/css/Shared/page2.css
@@ -3,6 +3,9 @@ html{
     padding: 0;
     margin:0;
 }
+* {
+    outline: 1px solid red;
+  }
 
 #root{
     width:100%;
