--- a/src/css/Social/friend.css
+++ b/src/css/Social/friend.css
@@ -2,4 +2,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: space-between;
+    overflow-y: scroll;
+    max-height: calc(100vh - 450px);
 }
