--- a/src/css/Social/obj.css
+++ b/src/css/Social/obj.css
@@ -1,7 +1,7 @@
 .displayObj{
     box-sizing: border-box;
 
-    width: 475px;
+    width: 450px;
     height: 95px;
 
     background: #F1EEEA;
